# rsd-engineeringcourse

./: .gitignore  README.md  index.html
ch00git/: 01Intro.html  01Intro.ipynb  02Solo.html  02Solo.ipynb  03Mistakes.html  03Mistakes.ipynb  04Publishing.html  04Publishing.ipynb  05Collaboration.html  05Collaboration.ipynb  06ForkAndPull.html  06ForkAndPull.ipynb  10Branches.html  10Branches.ipynb  11Miscellany.html  11Miscellany.ipynb  12Remotes.html  12Remotes.ipynb  13Rebase.html  13Rebase.ipynb  14Bisect.html  14Bisect.ipynb  index.html
ch01python/: 00pythons.html  00pythons.ipynb  010exemplar.html  010exemplar.ipynb  015variables.html  015variables.ipynb  016using_functions.html  016using_functions.ipynb  023types.html  023types.ipynb  025containers.html  025containers.ipynb  028dictionaries.html  028dictionaries.ipynb  029structures.html  029structures.ipynb  030MazeSolution.html  030MazeSolution.ipynb  032conditionality.html  032conditionality.ipynb  035looping.html  035looping.ipynb  036MazeSolution2.html  036MazeSolution2.ipynb  037comprehensions.html  037comprehensions.ipynb  038SolutionComprehension.html  038SolutionComprehension.ipynb  04functions.html  04functions.ipynb  050import.html  050import.ipynb  101Classes.html  101Classes.ipynb  draw_eight.py  index.html
ch02data/: 060files.html  060files.ipynb  061internet.html  061internet.ipynb  062csv.html  062csv.ipynb  064JsonYamlXML.html  064JsonYamlXML.ipynb  065MazeSaved.html  (+15 more)
ch04packaging/greetings_repo/: pyproject.toml
ch04packaging/greetings_repo/Greetings.egg-info/: PKG-INFO  SOURCES.txt
(+98 files in other folders)
